kubernetes/apps/external-server/external-server/app/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard
subsets:
  - addresses:
      - ip: "192.168.50.1"
    ports:
      - port: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: iyuu
subsets:
  - addresses:
      - ip: "192.168.50.220"
    ports:
      - port: 8780
---
apiVersion: v1
kind: Endpoints
metadata:
  name: moviepilot
subsets:
  - addresses:
      - ip: "192.168.50.220"
    ports:
      - port: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ugreen
subsets:
  - addresses:
      - ip: "192.168.50.220"
    ports:
      - port: 9999
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cold-minio-api
subsets:
  - addresses:
      - ip: "192.168.50.220"
    ports:
      - port: 9010
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cold-minio-console
subsets:
  - addresses:
      - ip: "192.168.50.220"
    ports:
      - port: 9011
---
apiVersion: v1
kind: Endpoints
metadata:
  name: hot-minio-api
subsets:
  - addresses:
      - ip: "192.168.50.220"
    ports:
      - port: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: hot-minio-console
subsets:
  - addresses:
      - ip: "192.168.50.220"
    ports:
      - port: 9001
