kubernetes/apps/external-server/external-server/app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: iyuu
spec:
  ports:
    - port: 8780
      targetPort: 8780
---
apiVersion: v1
kind: Service
metadata:
  name: moviepilot
spec:
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: omv
spec:
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ugreen
spec:
  ports:
    - port: 9999
      targetPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: cold-minio-api
spec:
  ports:
    - port: 9010
      targetPort: 9010
---
apiVersion: v1
kind: Service
metadata:
  name: cold-minio-console
spec:
  ports:
    - port: 9011
      targetPort: 9011
---
apiVersion: v1
kind: Service
metadata:
  name: hot-minio-api
spec:
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: hot-minio-console
spec:
  ports:
    - port: 9001
      targetPort: 9001
